Prevent focused AccordionItem from jumping depending on order of styles

--- a/packages/components/src/scss/_Run.scss
+++ b/packages/components/src/scss/_Run.scss
@@ -66,7 +66,8 @@ limitations under the License.
     // popovers or other menus such as the log settings
     z-index: 5996;
 
-    &:hover {
+    &:focus, &:hover {
+      // prevent Carbon from reverting to position: relative
       position: sticky;
     }
   }
